# Lempel-Ziv-Welch

./: .gitignore  User_Guide.txt  declaration.txt  main.py  readme.txt
lzw/: setup.cfg
lzw/src/: lzw.py
lzw/src/tests/: __init__.py  test_all.py
lzw_folchini/: setup.cfg
lzw_folchini/src/: __init__.py  decode.py  encode.py
lzw_folchini/src/tests/: test_all.py
lzw_package/: User_Guide.txt  readme.txt  setup.cfg
lzw_package/lzw/: decode.py  encode.py
lzw_package/lzw/tests/: __init__.py  test_all.py
