[metadata]

Metadata-Version: 1.0
Name: lzw
Version: 0.0.9
Summary: LZW Compression project
Home-page: UNKNOWN
Author: S. Folchini
Author-email: sfolchin@sissa.it
License: UNKNOWN
Description: UNKNOWN
Platform: UNKNOWN


[options]
packages = find:
install_requires =
					numpy==1.20.1 
					bitarray==1.8.0
